--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
         "dev": "vite",
-        "format": "prettier --write resources/",
-        "format:check": "prettier --check resources/",
+        "format": "prettier --write resources/ --log-level error",
+        "format:check": "prettier --check resources/ --log-level error",
         "lint": "eslint . --fix"
     },
     "devDependencies": {
