--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: php
+      target: development
     volumes:
       - .:/var/www/html
       - ./storage:/var/www/html/storage
@@ -26,7 +26,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: php
+      target: development
     volumes:
       - .:/var/www/html
       - ./storage:/var/www/html/storage
@@ -59,7 +59,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: php
+      target: development
     volumes:
       - .:/var/www/html
       - ./storage:/var/www/html/storage
@@ -95,7 +95,7 @@ services:
       - .:/app
       - /app/node_modules
     ports:
-      - "5173:5173"
+      - '5173:5173'
     command: npm run dev
     environment:
       - HOST=0.0.0.0
