--- a/railway.toml
+++ b/railway.toml
@@ -7,6 +7,7 @@ healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+startCommand = "php artisan serve --host=0.0.0.0 --port=$PORT"
 
 [env]
 NODE_ENV = "production"
@@ -17,23 +18,3 @@ LOG_STDERR_FORMATTER = "Monolog\\Formatter\\JsonFormatter"
 SESSION_DRIVER = "database"
 CACHE_DRIVER = "database"
 QUEUE_CONNECTION = "database"
-
-[services.web]
-source = "."
-plan = "starter"
-region = "us-west1"
-
-[services.web.env]
-APP_URL = { name = "RAILWAY_PUBLIC_DOMAIN", fallback = "http://localhost:8000" }
-PORT = { name = "PORT", fallback = "8000" }
-
-[services.web.healthcheck]
-path = "/health"
-intervalSeconds = 30
-timeoutSeconds = 10
-
-[services.web.deploy]
-command = "php artisan serve --host=0.0.0.0 --port=$PORT"
-
-[services.web.variables]
-RAILWAY_HEALTHCHECK_TIMEOUT_SEC = "300"
