--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -134,11 +134,9 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: |
-            type=gha,scope=buildkit-${{ matrix.platform }}
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:buildcache-${{ matrix.platform }}
+            type=gha,scope=buildkit-linux-amd64
           cache-to: |
-            type=gha,mode=max,scope=buildkit-${{ matrix.platform }}
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:buildcache-${{ matrix.platform }},mode=max
+            type=gha,mode=max,scope=buildkit-linux-amd64
           build-args: |
             BUILDKIT_INLINE_CACHE=1
 
@@ -191,8 +189,6 @@ jobs:
           cache-from: |
             type=gha,scope=buildkit-linux/amd64
             type=gha,scope=buildkit-linux/arm64
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:buildcache-linux/amd64
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:buildcache-linux/arm64
           build-args: |
             BUILDKIT_INLINE_CACHE=1
 
