--- a/.dockerignore
+++ b/.dockerignore
@@ -30,7 +30,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
+# package-lock.json - needed for npm ci in Docker builds
 
 # Build artifacts
 /public/build
