--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,8 +1,7 @@
 name: 🐛 Bug Report
 description: Report a bug or unexpected behavior
-title: "[Bug]: "
-labels: ["bug", "needs-triage"]
-assignees: []
+title: '[Bug]: '
+labels: ['bug', 'needs-triage']
 
 body:
   - type: markdown
@@ -81,7 +80,7 @@ body:
     attributes:
       label: Bug Summary
       description: A clear and concise description of what the bug is
-      placeholder: "Example: Patient SUS number validation fails for valid numbers starting with 0"
+      placeholder: 'Example: Patient SUS number validation fails for valid numbers starting with 0'
     validations:
       required: true
 
@@ -104,7 +103,7 @@ body:
     attributes:
       label: Expected Behavior
       description: A clear description of what you expected to happen
-      placeholder: "The patient should be saved successfully with the valid SUS number"
+      placeholder: 'The patient should be saved successfully with the valid SUS number'
     validations:
       required: true
 
@@ -220,9 +219,9 @@ body:
       label: Availability for Follow-up
       description: Are you available to provide additional information if needed?
       options:
-        - "Yes, I can provide more details if needed"
-        - "Limited availability"
-        - "No, please work with the information provided"
+        - 'Yes, I can provide more details if needed'
+        - 'Limited availability'
+        - 'No, please work with the information provided'
     validations:
       required: false
 
