--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,8 +1,7 @@
 name: ✨ Feature Request
 description: Suggest an idea or enhancement for this project
-title: "[Feature]: "
-labels: ["enhancement", "needs-triage"]
-assignees: []
+title: '[Feature]: '
+labels: ['enhancement', 'needs-triage']
 
 body:
   - type: markdown
