Remove patient document support and migrate to entry documents

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -63,7 +63,7 @@ body:
       options:
         - Patient Management
         - Entry Management
-        - Document Upload/Management
+        - Entry Document Upload/Management
         - User Authentication
         - Database/Data
         - API/Backend
