--- a/fly/nginx.conf
+++ b/fly/nginx.conf
@@ -70,7 +70,7 @@ http {
     real_ip_recursive on;
 
     upstream php-fpm {
-        server unix:/var/run/php82-fpm.sock;
+        server 127.0.0.1:9000;
         keepalive 16;
     }
 
