--- a/fly/supervisord.conf
+++ b/fly/supervisord.conf
@@ -27,7 +27,7 @@ startretries=3
 priority=10
 
 [program:php-fpm]
-command=php-fpm82 -F
+command=php-fpm -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
