chore: the name of project was typed without quotes.

--- a/.env.fly
+++ b/.env.fly
@@ -3,7 +3,7 @@
 # Use: flyctl secrets set --from-file .env.fly
 
 # Application
-APP_NAME="Regulação List"
+APP_NAME="Lista da Regulação"
 APP_ENV=production
 APP_DEBUG=false
 APP_KEY=
