--- a/.env.railway
+++ b/.env.railway
@@ -2,7 +2,7 @@
 # This file contains Railway-specific environment variables
 
 # Application
-APP_NAME="Regulação List"
+APP_NAME="Lista da Regulação"
 APP_ENV=production
 APP_DEBUG=false
 APP_URL=${RAILWAY_PUBLIC_DOMAIN}
